--- a/package.json
+++ b/package.json
@@ -14,7 +14,9 @@
     "@react-three/fiber": "^9.1.0",
     "axios": "^1.8.2",
     "firebase": "^11.4.0",
+    "framer-motion": "^12.6.3",
     "react": "^19.0.0",
+    "react-colorful": "^5.6.1",
     "react-dom": "^19.0.0",
     "react-icons": "^5.5.0",
     "react-router-dom": "^7.3.0",
